- css fixes - removed redundant routes - aligned buttons in material-dialog footer - added padding to material-drawer

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -108,3 +108,6 @@ material-switch {
 material-progress {
     --progress-bar-width: 250px !important;
 }
+material-dropdown {
+    margin-bottom: 150px;
+}
